/*
 * This file is part of Dependency-Track.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 * Copyright (c) OWASP Foundation. All Rights Reserved.
 */
syntax = "proto3";

package org.dependencytrack.dex.failure.v1;

option java_multiple_files = true;
option java_package = "org.dependencytrack.dex.proto.failure.v1";

message Failure {
  optional string message = 1;
  optional string stack_trace = 2;
  optional Failure cause = 3;
  oneof failure_details {
    ActivityFailureDetails activity_failure_details = 25;
    ApplicationFailureDetails application_failure_details = 26;
    CancellationFailureDetails cancellation_failure_details = 27;
    SideEffectFailureDetails side_effect_failure_details = 28;
    ChildWorkflowFailureDetails child_workflow_failure_details = 29;
    InternalFailureDetails internal_failure_details = 30;
  }
}

message ActivityFailureDetails {
  string activity_name = 1;
}

message ApplicationFailureDetails {
  bool is_terminal = 1;
}

message CancellationFailureDetails {
  string reason = 1;
}

message SideEffectFailureDetails {
  string side_effect_name = 1;
}

message ChildWorkflowFailureDetails {
  string workflow_run_id = 1;
  string workflow_name = 2;
  int32 workflow_version = 3;
}

message InternalFailureDetails {
}